@@ -13,6 +13,7 @@ Ver.5.1 (in development)
 - Change SHA-1 JavaScript library.
   (tiny-sha1 <https://code.google.com/p/tiny-sha1/> is contained in the INTER-Mediator.)
 - Avoid using the @-operator for error suppression in NotifyServer.php to reduce bug risk.
+- Eliminate die() in INTER-Mediator.php to reduce bug risk.
 - Remove duplication in MessageStrings_ja.php and modify MessageStrings.php.
 
 Ver.5.0 (February 20, 2015) =====================================
